добавляет анимацию всем блокам на главной

--- a/source/pug/pages/index.pug
+++ b/source/pug/pages/index.pug
@@ -41,7 +41,7 @@ block main
               span Github
     section.stack#stack
       .container
-        h2.stack__title Мой стек
+        h2.stack__title.anim-items.fadeInLeftBig Мой стек
         ul.stack__list
           li.stack__item
             h3.stack__heading Html 5
@@ -176,74 +176,74 @@ block main
                 li.stack__feature Небольшой опыт использования React-hooks (useState, useEffect, useMemo, useContext)
     section.projects#projects
       .container
-        h2.projects__title Мои проекты
-        p.projects__description Несколько выполненных работ для демострации навыков
+        h2.projects__title.anim-items.fadeInLeftBig Мои проекты
+        p.projects__description.anim-items.fadeIn Несколько выполненных работ для демострации навыков
         ul.projects__list
-          li.projects__item.projects__item--big
+          li.projects__item.projects__item--big.anim-items.fadeInRightBig
             a.projects__link(href="denim/index.html")
               span Denim
               img(src="img/denim.jpg" width=770 height=295 alt="denim")
-          li.projects__item
+          li.projects__item.anim-items.fadeInRightBig
             a.projects__link(href="veles/veles.html")
               span Veles
               img(src="img/veles.jpg" width=370 height=295 alt="veles")
-          li.projects__item
+          li.projects__item.anim-items.fadeInRightBig
             a.projects__link(href="honey/honey.html")
               span Honey - мёд на любой вкус! (без адаптива - 2 страницы)
               img(src="img/honey.jpg" width=370 height=295 alt="honey")
-          li.projects__item.projects__item--big
+          li.projects__item.projects__item--big.anim-items.fadeInRightBig
             a.projects__link(href="escaperoom/escaperoom.html")
               span Escaperoom - страница квестов в реальности (адаптив мобильная, планшетная, десктопная версии - несколько страниц)
               img(src="img/escaperoom.jpg" width=770 height=295 alt="escaperoom")
     section.contacts#contacts
       .container
-        h2.contacts__title Контакты
-        p.contacts__phone
+        h2.contacts__title.anim-items.anim-no-hide.fadeInLeftBig.anim-items.fadeInLeftBig Контакты
+        p.contacts__phone.anim-items.fadeInLeftBig
           span
             +icon("icon-phone", 20, 20)
           a(href="tel:+79876467121") +79876467121
-        p.contacts__email
+        p.contacts__email.anim-items.fadeInLeftBig
           span
             +icon("icon-mail", 22, 18)
           a(href="mailto:kirillmorgunov@mail.ru") kirillmorgunov@mail.ru
-        p.contacts__skype
+        p.contacts__skype.anim-items.fadeInLeftBig
           span
              +icon("icon-skype", 30, 30)
           a(href="skype:kirillmorgunov@mail.ru") kirillmorgunov@mail.ru
     section.study#study
       .container
-        h2.study__title Мое обучение
-        p.study__description Источники, книги, курсы, которые я использую для обучения
+        h2.study__title.anim-items.fadeInLeftBig Мое обучение
+        p.study__description.anim-items.fadeIn Источники, книги, курсы, которые я использую для обучения
         .study__section
-          h3.study__heading Оконченные курсы
-          ul.study__list.study__list--courses
-            li.study__item
+          h3.study__heading.anim-items.fadeInLeftBig Оконченные курсы
+          ul.study__list.study__list--courses.anim-items.anim-no-hide.fadeInRightBig
+            li.study__item.anim-items.anim-no-hide.fadeInRightBig
               img(src="img/1levelHtml.jpg" width=300 height=400 alt="1 level html & css certificate")
-            li.study__item
+            li.study__item.anim-items.anim-no-hide.fadeInRightBig
               img(src="img/2levelHtml.jpg"  width=300 height=400 alt="2 level html & css certificate")
-            li.study__item
+            li.study__item.anim-items.anim-no-hide.fadeInRightBig
               img(src="img/1levelJS.jpg"  width=300 height=400 alt="1 level js certificate")
         .study__section
-          h3.study__heading Книги
+          h3.study__heading.anim-items.fadeInLeftBig Книги
           ul.study__list.study__list--books
-            li.study__item
+            li.study__item.anim-items.anim-no-hide.fadeInRightBig
               img(src="img/flanagan.jpg" width=300 height=400 alt="flanagan book")
-            li.study__item
+            li.study__item.anim-items.anim-no-hide.fadeInRightBig
               img(src="img/eloquent.jpg"  width=300 height=400 alt="eloquent javascript book")
-            li.study__item
+            li.study__item.anim-items.anim-no-hide.fadeInRightBig
               img(src="img/rezig.jpg"  width=300 height=400 alt="rezig book")
         .study__section
-          h3.study__heading Интернет ресурсы
+          h3.study__heading.anim-items.fadeInLeftBig Интернет ресурсы
           ul.study__list.study__list--inthernet
-            li.study__item
+            li.study__item.anim-items.anim-no-hide.fadeInRightBig
               a.study__link(href="https://htmlacademy.ru/") Html academy
-            li.study__item
+            li.study__item.anim-items.anim-no-hide.fadeInRightBig
               a.study__link(href="https://learn.javascript.ru") learn.javascript.ru
-            li.study__item
+            li.study__item.anim-items.anim-no-hidefadeInRightBig
               a.study__link(href="https://www.codecademy.com") Codeacademy
-            li.study__item
+            li.study__item.anim-items.anim-no-hide.fadeInRightBig
               a.study__link(href="https://developer.mozilla.org/ru/") MDN webdocs
-            li.study__item
+            li.study__item.anim-items.anim-no-hide.fadeInRightBig
               a.study__link(href="https://www.udemy.com") Udemy
 
 
