--- a/source/sass/portfolio/blocks/contacts.scss
+++ b/source/sass/portfolio/blocks/contacts.scss
@@ -11,7 +11,12 @@
         line-height: 1.417; 
         text-align: center;
         font-weight: 500;
-        margin: 0 0 40px 0;           
+        margin: 0 0 40px 0;     
+        
+        &.anim-active {
+            animation-duration: 5s;
+            animation-fill-mode: both;
+          }
     }
 
     &__phone,
@@ -21,6 +26,11 @@
         display: flex;
         justify-content: center;
         align-items: center;
+
+        &.anim-active {
+            animation-duration: 5s;
+            animation-fill-mode: both;
+          }
         
         span {
             font-size: 22px;
@@ -39,7 +49,23 @@
         }
     }
 
+    &__phone {
+        &.anim-active {
+           animation-delay: 1s;
+        }
+    }
+
+    &__email {
+        &.anim-active {
+            animation-delay: 1.5s;
+        }
+    }
+
     &__skype {
+        &.anim-active {
+            animation-delay: 2s;
+        }
+
         svg {
             transform: translateY(6px);
         }
