--- a/source/sass/portfolio/blocks/stack.scss
+++ b/source/sass/portfolio/blocks/stack.scss
@@ -19,6 +19,11 @@
     @media (max-width: 768px) {
       margin: 0 0 50px 0;
     }
+
+    &.anim-active {
+      animation-duration: 4s;
+      animation-fill-mode: both;
+    }
   }
 
   &__list {
@@ -26,7 +31,7 @@
     padding: 0;
     list-style: none;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: wrap;    
 
     @media (max-width: 768px) {
       display: block;
@@ -42,7 +47,8 @@
     text-align: center;
     background-color: #000000;
     display: flex;
-    flex-direction: column;
+    flex-direction: column;    
+  
 
     &:nth-of-type(#{$card-count}n) {
       margin-right: 0;
