--- a/source/sass/portfolio/blocks/study.scss
+++ b/source/sass/portfolio/blocks/study.scss
@@ -24,6 +24,12 @@
     line-height: 1.2;
     text-align: center;
     margin: 0 0 35px 0;
+
+    &.anim-active {     
+      animation-delay: 2s;      
+      animation-duration: 3s;
+      animation-fill-mode: both;
+    }
   }
 
   &__description {
@@ -33,6 +39,12 @@
     line-height: 1.625;
     text-align: center;
     margin: 0 0 65px 0;
+
+    &.anim-active {           
+      animation-delay: 4s;      
+      animation-duration: 3s;
+      animation-fill-mode: both;
+    }
   }
 
   &__list {
@@ -57,6 +69,13 @@
 
   &__item {
     margin-bottom: 20px;
+    opacity: 0;
+
+    &.anim-active {           
+      animation-delay: 2s;      
+      animation-duration: 3s;
+      animation-fill-mode: both;
+    }
   }
 
   &__heading {
@@ -67,6 +86,12 @@
     line-height: 1.2;
     text-align: center;
     margin: 0 0 50px 0;
+
+    &.anim-active {           
+      animation-delay: 2s;      
+      animation-duration: 3s;
+      animation-fill-mode: both;
+    }
   }
 
   &__link {
