--- a/source/pug/base/layout.pug
+++ b/source/pug/base/layout.pug
@@ -13,16 +13,8 @@ html(lang="ru")
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    meta(name="description", content="Мёд - оптом и в розницу")
-
-    link(rel="apple-touch-icon" sizes="180x180" href="img/favicon1/apple-touch-icon.png")
-    link(rel="icon" type="image/png" sizes="32x32" href="img/favicon1/favicon-32x32.png")
-    link(rel="icon" type="image/png" sizes="16x16" href="img/favicon1/favicon-16x16.png")   
-    link(rel="mask-icon" href="img/favicon1/safari-pinned-tab.svg" color="#ffcf55")
-    meta(name="msapplication-TileColor" content="#ffcf55")
-    meta(name="theme-color" content="#ffffff")
-
-    link(rel="stylesheet", href="../css/style.min.css")
+    meta(name="description", content="Моргунов Кирилл - портфолио фронтенд разработчика")
+    link(rel="stylesheet", href="css/style.min.css")
 
   body
     +sprite()
@@ -36,5 +28,5 @@ html(lang="ru")
 
     block modals
 
-    script(src="../js/vendor.min.js")
-    script(src="../js/main.min.js")
+    script(src="js/vendor.min.js")
+    script(src="js/main.min.js")
