--- a/source/pug/pages/denim/catalog.pug
+++ b/source/pug/pages/denim/catalog.pug
@@ -122,55 +122,55 @@ html(lang="ru")
           li.catalog__item(data-type="casual" data-color="lightblue")
             a.card(href="product.html")
               .card__img
-                img(src="../img4/Jacket3.jpg" width="243" height="270" alt="фотография девушки в одежде бренда")
+                img(src="../img4/jacket3.jpg" width="243" height="270" alt="фотография девушки в одежде бренда")
               h3.card__heading Jacket
               p.card__price $ 40
           li.catalog__item(data-type="classic" data-color="gray")
             a.card(href="product.html")
               .card__img
-                img(src="../img4/Jacket4.jpg" width="243" height="270" alt="фотография девушки в одежде бренда")
+                img(src="../img4/jacket4.jpg" width="243" height="270" alt="фотография девушки в одежде бренда")
               h3.card__heading Jacket
               p.card__price $ 60
           li.catalog__item(data-type="classic" data-color="lightgray")
             a.card(href="product.html")
               .card__img
-                img(src="../img4/Jacket5.jpg" width="243" height="270" alt="фотография девушки в одежде бренда")
+                img(src="../img4/jacket5.jpg" width="243" height="270" alt="фотография девушки в одежде бренда")
               h3.card__heading Jacket
               p.card__price $ 80
           li.catalog__item(data-type="soulluxe" data-color="lightgray")
             a.card(href="product.html")
               .card__img
-                img(src="../img4/Jacket6.jpg" width="243" height="270" alt="фотография девушки в одежде бренда")
+                img(src="../img4/jacket6.jpg" width="243" height="270" alt="фотография девушки в одежде бренда")
               h3.card__heading Jacket
               p.card__price $ 220
           li.catalog__item(data-type="casual" data-color="lightblue")
             a.card(href="product.html")
               .card__img
-                img(src="../img4/Jacket7.jpg" width="243" height="270" alt="фотография девушки в одежде бренда")
+                img(src="../img4/jacket7.jpg" width="243" height="270" alt="фотография девушки в одежде бренда")
               h3.card__heading Jacket
               p.card__price $ 120
           li.catalog__item(data-type="Petite" data-color="ashy")
             a.card(href="product.html")
               .card__img
-                img(src="../img4/Jacket8.jpg" width="243" height="270" alt="фотография девушки в одежде бренда")
+                img(src="../img4/jacket8.jpg" width="243" height="270" alt="фотография девушки в одежде бренда")
               h3.card__heading Jacket
               p.card__price $ 140
           li.catalog__item.catalog__item--big(data-type="soulluxe" data-color="blue")
             a.card(href="product.html")
               .card__img
-                img(src="../img4/Jacketbig1.jpg" width="552" height="670" alt="фотография девушки в одежде бренда")
+                img(src="../img4/jacketbig1.jpg" width="552" height="670" alt="фотография девушки в одежде бренда")
               h3.card__heading Jacket
               p.card__price $ 300
           li.catalog__item(data-type="classic" data-color="blue")
             a.card(href="product.html")
               .card__img
-                img(src="../img4/Jacket9.jpg" width="243" height="270" alt="фотография девушки в одежде бренда")
+                img(src="../img4/jacket9.jpg" width="243" height="270" alt="фотография девушки в одежде бренда")
               h3.card__heading Jacket
               p.card__price $ 250
           li.catalog__item(data-type="classic" data-color="ashy")
             a.card(href="product.html")
               .card__img
-                img(src="../img4/Jacket10.jpg" width="243" height="270" alt="фотография девушки в одежде бренда")
+                img(src="../img4/jacket10.jpg" width="243" height="270" alt="фотография девушки в одежде бренда")
               h3.card__heading Jacket
               p.card__price $ 100
         .catalog__more
