--- a/source/pug/pages/denim/index.pug
+++ b/source/pug/pages/denim/index.pug
@@ -96,7 +96,7 @@ html(lang="ru")
         a.bestsellers__all(href="#") View all
       section.fall.container.anim-items.fadeInTopBig
         .fall__image
-           img(src="../img4/Fall2019.jpg" width="700" height="370" alt="фотография девушки и пярня в одежде бренда")
+           img(src="../img4/fall2019.jpg" width="700" height="370" alt="фотография девушки и пярня в одежде бренда")
         .fall__container
           .fall__info
             p.fall__description Street fashion collection
@@ -110,12 +110,12 @@ html(lang="ru")
           li.categories__item.anim-items.fadeInLeftBig
             a.card(href="#")
               .card__img
-                img(src="../img4/Jeans.jpg" width="270" height="349" alt="фотография девушки в одежде бренда")
+                img(src="../img4/jeans.jpg" width="270" height="349" alt="фотография девушки в одежде бренда")
               h3.card__heading Jacket
           li.categories__item.anim-items.fadeInLeftBig
             a.card(href="#")
               .card__img
-                img(src="../img4/Shirts.jpg" width="270" height="290" alt="фотография девушки в одежде бренда")
+                img(src="../img4/shirts.jpg" width="270" height="290" alt="фотография девушки в одежде бренда")
               h3.card__heading Shirts
           li.categories__item.categories__item--big.anim-items.fadeInRightBig
             a.card(href="#")
@@ -125,7 +125,7 @@ html(lang="ru")
           li.categories__item.categories__item--small.anim-items.fadeInRightBig
             a.card(href="#")
               .card__img
-                img(src="../img4/Overalls3.jpg" width="270" height="290" alt="фотография девушки в одежде бренда")
+                img(src="../img4/overalls3.jpg" width="270" height="290" alt="фотография девушки в одежде бренда")
               h3.card__heading Overalls
         a.categories__all(href="#") View all
     footer.footer
